# app-store-server-library-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
assets/: SubscriptionKey_L256SYR32L.p8  signedConsumptionRequestNotification.json  signedExternalPurchaseTokenNotification.json  signedExternalPurchaseTokenSandboxNotification.json  signedRenewalInfo.json
benches/: benchmarks.rs
src/: api_client.rs  chain_verifier.rs  chain_verifier_ocsp.rs  jws_signature_creator.rs  lib.rs  promotional_offer_signature_creator.rs  receipt_utility.rs  signed_data_verifier.rs  utils.rs
src/api_client/: api_client.rs  error.rs  mod.rs  transport.rs
src/api_client/api/: advanced_commerce_api.rs  app_store_server_api.rs  mod.rs  retention_messaging_api.rs
src/api_client/api/advanced_commerce_api/: api_error_code.rs
src/api_client/api/app_store_server_api/: api_error_code.rs
src/api_client/api/retention_messaging_api/: api_error_code.rs
src/api_client/reqwest_transport/: mod.rs  reqwest_http_transport.rs
src/asn1/: asn1_basics.rs  mod.rs
src/primitives/: account_tenure.rs  advanced_commerce_price_increase_info.rs  advanced_commerce_renewal_info.rs  advanced_commerce_renewal_item.rs  advanced_commerce_transaction_info.rs  advanced_commerce_transaction_item.rs  app_data.rs  app_transaction.rs  app_transaction_info_response.rs  auto_renew_status.rs  check_test_notification_response.rs  consumption_request.rs  consumption_request_reason.rs  consumption_request_v1.rs  consumption_status.rs  data.rs  de_ext.rs  delivery_status.rs  delivery_status_v1.rs  environment.rs  error_payload.rs  expiration_intent.rs  extend_reason_code.rs  extend_renewal_date_request.rs  extend_renewal_date_response.rs  external_purchase_token.rs  first_send_attempt_result.rs  history_response.rs  in_app_ownership_type.rs  jws_renewal_info_decoded_payload.rs  jws_transaction_decoded_payload.rs  last_transactions_item.rs  lifetime_dollars_purchased.rs  lifetime_dollars_refunded.rs  mass_extend_renewal_date_request.rs  mass_extend_renewal_date_response.rs  mass_extend_renewal_date_status_response.rs  mod.rs  notification_history_request.rs  notification_history_response.rs  (+33 more)
src/primitives/advanced_commerce/: base_response.rs  descriptors.rs  effective.rs  error.rs  in_app_request.rs  in_app_request_operation.rs  in_app_request_version.rs  mod.rs  offer.rs  offer_period.rs  offer_reason.rs  one_time_charge_create_request.rs  one_time_charge_create_response.rs  one_time_charge_item.rs  period.rs  reason.rs  refund.rs  refund_reason.rs  refund_type.rs  request_descriptors.rs  request_info.rs  request_offer.rs  request_operation.rs  request_refund_item.rs  request_refund_request.rs  request_refund_response.rs  request_version.rs  subscription_cancel_request.rs  subscription_cancel_response.rs  subscription_change_metadata_descriptors.rs  subscription_change_metadata_item.rs  subscription_change_metadata_request.rs  subscription_change_metadata_response.rs  subscription_create_item.rs  subscription_create_request.rs  subscription_migrate_descriptors.rs  subscription_migrate_item.rs  subscription_migrate_renewal_item.rs  subscription_migrate_request.rs  subscription_migrate_response.rs  (+14 more)
src/primitives/retention_messaging/: advanced_commerce_info.rs  alternate_product.rs  decoded_realtime_request_body.rs  default_configuration_request.rs  failures.rs  get_image_list_response.rs  get_image_list_response_item.rs  get_message_list_response.rs  get_message_list_response_item.rs  image_state.rs  message.rs  message_state.rs  mod.rs  performance_test_config.rs  performance_test_request.rs  performance_test_response.rs  performance_test_response_times.rs  performance_test_result_response.rs  performance_test_status.rs  promotional_offer.rs  promotional_offer_signature_v1.rs  realtime_request_body.rs  realtime_response_body.rs  upload_message_image.rs  upload_message_request_body.rs
src/x509/: x509.rs
tests/: ac_api_client.rs  api_client.rs  ass_api_client.rs  chain_verifier.rs  chain_verifier_ocsp.rs  jws_signature_creator.rs  promotional_offer_signature_creator.rs  realtime_response_body_tests.rs  receipt_utility.rs  rm_api_client.rs  signed_data_verifier.rs
tests/common/: mod.rs  transport_mock.rs
tests/resources/models/: getImageListResponse.json  getMessageListResponse.json  requestRefundResponse.json  subscriptionMigrateResponse.json
tests/resources/xcode/: xcode-app-receipt-legacy
