[package]
name = "app-store-server-library"
description = "The Rust server library for the App Store Server API and App Store Server Notifications"
version = "3.0.0"
repository = "https://github.com/namecare/app-store-server-library-rust"
homepage = "https://github.com/namecare/app-store-server-library-rust"
authors = ["tkhp", "namecare"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/app-store-server-library"
keywords = ["apple", "appstore"]
edition = "2021"

[dependencies]

# Cryptography
x509-parser = { version = "0.17.0", features = ["verify", "validate"] }
jsonwebtoken = { version = "9.3.1" }
ring = "0.17.14"
pem = "3.0.5"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142" }
serde_with = { version = "3.14.0", features = ["chrono"] }
serde_repr = "0.1.20"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
base64 = "0.22.1"
asn1-rs = { version = "0.7.1", optional = true }

# Networking
reqwest = { version = "0.12.22", default-features = false, features = ["json"], optional = true }

# Utils
thiserror = "2.0.12"

# Tools
regex = { version = "1.11.1", optional = true }

[dev-dependencies]
http = "1.3.1"
tokio = { version = "1.47.1", features = ["test-util", "macros"] }
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }

[features]
api-client = ["dep:reqwest", "reqwest/rustls-tls-native-roots"]
api-client-native-tls = ["dep:reqwest", "reqwest/default-tls"]
receipt-utility = ["dep:asn1-rs", "dep:regex"]

