[package]
name = "app-store-server-library"
description = "The Rust server library for the App Store Server API, App Store Server Notifications and Advanced Commerce API"
version = "4.1.0"
repository = "https://github.com/namecare/app-store-server-library-rust"
homepage = "https://github.com/namecare/app-store-server-library-rust"
authors = ["tkhp", "namecare"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/app-store-server-library"
keywords = ["apple", "appstore", "appstore-server-api", "appstore-receipt", "advanced-commerce"]
edition = "2021"

[dependencies]

# Cryptography
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"]  }
ring = "0.17.14"
pem-rfc7468 = "1.0.0"
der = { version = "0.7.10", features = ["alloc", "oid"] }
x509-cert = { version = "0.2.5", features = ["std"] }
x509-ocsp = { version = "0.2.1" , optional = true }
const-oid = { version = "0.9.6" }
spki = { version = "0.7.3" }
sha1 = { version = "0.10.6" }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
serde_with = { version = "3.15.1", features = ["chrono"] }
serde_repr = "0.1.20"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
base64 = "0.22.1"

# Networking
reqwest = { version = "0.12.24", default-features = false, features = ["json"], optional = true }
http = { version = "1.3.1", optional = true }

# Utils
thiserror = "2.0.17"

# Tools
regex = { version = "1.12.2", optional = true }

[dev-dependencies]

tokio = { version = "1.48.0", features = ["test-util", "macros"] }
jsonwebtoken = { version = "10.2.0", features = ["use_pem"] }

[features]
api-client = ["dep:http"]
api-client-reqwest = ["api-client", "dep:reqwest", "reqwest/rustls-tls-native-roots"]
api-client-reqwest-native-tls = ["api-client", "dep:reqwest", "reqwest/default-tls"]
receipt-utility = ["dep:regex"]
ocsp = ["dep:x509-ocsp", "dep:reqwest", "reqwest/blocking"]

[[test]]
name = "ass_api_client"
path = "tests/ass_api_client.rs"
required-features = ["api-client"]

[[test]]
name = "ac_api_client"
path = "tests/ac_api_client.rs"
required-features = ["api-client"]

[[test]]
name = "rm_api_client"
path = "tests/rm_api_client.rs"
required-features = ["api-client"]

[[test]]
name = "chain_verifier_ocsp"
path = "tests/chain_verifier_ocsp.rs"
required-features = ["ocsp"]